k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mahjongstats-deployment
  namespace: mahjong
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mahjongstats
  template:
    metadata:
      labels:
        app: mahjongstats
    spec:
      containers:
        - name: mahjongstats
          image: victorgf87/all_pon:latest
          ports:
            - containerPort: 9001
          volumeMounts:
            - name: mahjongstats-storage
              mountPath: /app/storage
      volumes:
        - name: mahjongstats-storage
          persistentVolumeClaim:
            claimName: mahjongstats-pvc
