k8s/mi-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-app
  namespace: mahjong
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mi-app
  template:
    metadata:
      labels:
        app: mi-app
    spec:
      containers:
        - name: mi-app
          image: us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mi-app-service
  namespace: mahjong
spec:
  type: LoadBalancer
  selector:
    app: mi-app
  ports:
    - port: 82
      targetPort: 8080
