k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mahjongstats-service
  namespace: mahjong
spec:
  selector:
    app: mahjongstats
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
  type: ClusterIP
