k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mahjongstats-ingress
  namespace: mahjong
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - localhost
        - mahjongstats.com
        - mahjongstats.ddns.net
      secretName: mahjongstats-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mahjongstats-service
                port:
                  number: 9001
    - host: mahjongstats.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mahjongstats-service
                port:
                  number: 9001
    - host: mahjongstats.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mahjongstats-service
                port:
                  number: 9001
