k8s/rails-deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mahjongstats-ingress
  namespace: mahjong
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - mahjongstats.ddns.net
        - mahjongstats.com
        - localhost
      secretName: mahjongstats-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mahjongstats-service
                port:
                  number: 80
    - host: mahjongstats.ddns.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mahjongstats-service
                port:
                  number: 80
    - host: mahjongstats.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mahjongstats-service
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mahjongstats-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mahjongstats-service
  namespace: mahjong
spec:
  type: LoadBalancer
  selector:
    app: mahjongstats
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mahjongstats
  namespace: mahjong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-app
  template:
    metadata:
      labels:
        app: rails-app
    spec:
      containers:
        - name: rails-app
          image: victorgf87/all_pon:latest
          ports:
            - containerPort: 3000
